# pokemon-utils

./: Cargo.toml  README.md  build.rs
pokeapi-client/: Cargo.toml  README.md
pokeapi-client/src/: characteristic.rs  lib.rs  pokemon.rs  species.rs
src/: lib.rs  main.rs  pokedex.rs  types.rs
src/rates/: encounter.rs  mod.rs
