[package]
name = "pokemon-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["pokeapi-client"]

[dependencies]
log = "0.4.20"
paste = "1.0.14"
rand = "0.8.5"

[dev-dependencies]
plotters = "0.3.5"
