[package]
name = "pokemon-utils"
version = "0.1.33"
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
a collection of pokemon related utilities

Project homepage: https://github.com/isaacadams/pokemon-utils
"""
readme = "README.md"
homepage = "https://github.com/isaacadams/pokemon-utils"
repository = "https://github.com/isaacadams/pokemon-utils"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["pokeapi-client"]

[dependencies]
log = "0.4"
paste = "1.0"
rand = "0.9"

[dev-dependencies]
plotters = "0.3"
