[package]
name = "pokeapi-client"
version = "0.1.0"
edition = "2021"
description = """
pokeapi api client

Project homepage: https://github.com/isaacadams/pokemon-utils
"""
readme = "README.md"
homepage = "https://github.com/isaacadams/pokemon-utils"
repository = "https://github.com/isaacadams/pokemon-utils"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.20", features = ["json"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["parking_lot", "macros"] }
